--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,22 @@
 [package]
 edition = "2024"
-name = "scale"
+name = "grindy"
 version = "0.1.0"
 license = "Apache-2.0"
-
 
 [dependencies]
 embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
 embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-rp = { version = "0.7.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
-
 defmt = "1.0.1"
 defmt-rtt = "1.0.0"
-
-
 #cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
 cortex-m = { version = "0.7.6", features = ["inline-asm"] }
 cortex-m-rt = "0.7.0"
 panic-probe = { version = "1.0.0", features = ["print-defmt"] }
+loadcell = "0.3.0"
+heapless = "0.8.0"
+num-traits = { version = "0.2.19", default-features = false }
 
 [[bin]]
 name = "grindy"
@@ -25,7 +24,6 @@ path = "src/main.rs"
 test = false
 doctest = false
 bench = false
-
 
 [profile.release]
 # Enable generation of debug symbols even on release builds
