--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,7 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "probe-rs run --chip RP2040"
+# runner = "probe-rs run --chip RP2040"
+runner = "picotool load -u -v -x -t elf"
+
 
 [build]
 target = "thumbv6m-none-eabi"
