--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 embassy-executor = { version = "~0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
 embassy-time = { version = "~0.5", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-rp = { version = "~0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
+embassy-net = { version = "~0.7", features = ["tcp", "proto-ipv4", "medium-ethernet"] }
 defmt = "~1.0"
 defmt-rtt = "~1.0"
 #cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
@@ -21,6 +22,7 @@ embassy-sync = "~0.7"
 cyw43 = { version = "~0.5", features = ["defmt", "firmware-logs"] }
 cyw43-pio = { version = "~0.8", features = ["defmt"] }
 static_cell = "~2.1"
+picoserve = { version = "~0.16", features = ["embassy", "log"] }
 
 [[bin]]
 name = "grindy"
