--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,10 +1,9 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-# runner = "probe-rs run --chip RP2040"
-runner = "picotool load -u -v -x -t elf"
-
+runner = "probe-rs run --chip RP350x"
+# runner = "picotool load -u -v -x -t elf"
 
 [build]
-target = "thumbv6m-none-eabi"
+target = "thumbv8m.main-none-eabihf"
 
 [env]
 DEFMT_LOG = "debug"
