--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,22 @@ version = "0.1.0"
 license = "Apache-2.0"
 
 [dependencies]
-embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
-embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
-embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
-defmt = "1.0.1"
-defmt-rtt = "1.0.0"
+embassy-executor = { version = "~0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
+embassy-time = { version = "~0.5", features = ["defmt", "defmt-timestamp-uptime"] }
+embassy-rp = { version = "~0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
+defmt = "~1.0"
+defmt-rtt = "~1.0"
 #cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
-cortex-m = { version = "0.7.6", features = ["inline-asm"] }
-cortex-m-rt = "0.7.0"
-panic-probe = { version = "1.0.0", features = ["print-defmt"] }
-loadcell = "0.3.0"
-heapless = "0.8.0"
-num-traits = { version = "0.2.19", default-features = false }
-embassy-sync = "0.7.2"
+cortex-m = { version = "~0.7", features = ["inline-asm"] }
+cortex-m-rt = "~0.7"
+panic-probe = { version = "~1.0", features = ["print-defmt"] }
+loadcell = "~0.3"
+heapless = "~0.8"
+num-traits = { version = "~0.2", default-features = false }
+embassy-sync = "~0.7"
+cyw43 = { version = "~0.5", features = ["defmt", "firmware-logs"] }
+cyw43-pio = { version = "~0.8", features = ["defmt"] }
+static_cell = "~2.1"
 
 [[bin]]
 name = "grindy"
