--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,13 @@ loadcell = "~0.3"
 heapless = { version = "~0.9", features = ["serde"] }
 num-traits = { version = "~0.2", default-features = false }
 embassy-sync = "~0.7"
+embassy-futures = "~0.1"
 cyw43 = { version = "~0.5", features = ["defmt", "firmware-logs"] }
 cyw43-pio = { version = "~0.8", features = ["defmt"] }
 static_cell = "~2.1"
 picoserve = { version = "~0.16", features = ["embassy", "log"] }
+serde = { version = "~1.0", default-features = false, features = ["derive"] }
+serde-json-core = "~0.6"
 
 [[bin]]
 name = "grindy"
